# mocker

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.bash  mocker-c  optim.bash  semantic.bash
builtin/: builtin.asm  builtin.c  c2nasm.bash
compiler/: CMakeLists.txt  compiler.h  main.cpp
compiler/ast/: ast_node.h
compiler/codegen/: common.h  helper.h  instruction_selection.cpp  instruction_selection.h  liveness.cpp  liveness.h  naive_instruction_selection.cpp  naive_instruction_selection.h  naive_register_allocation.cpp  naive_register_allocation.h  nasm_cfg.cpp  nasm_cfg.h  peephole.cpp  peephole.h  register_allocation.cpp  register_allocation.h  vreg_assignment.cpp  vreg_assignment.h
compiler/common/: defs.h  error.h
compiler/ir_builder/: build.cpp  build.h  builder.cpp  builder.h  builder_context.cpp  builder_context.h  preprocessor.cpp  preprocessor.h
compiler/optim/: codegen_prepare.cpp  codegen_prepare.h  constant_propagation.cpp  constant_propagation.h  copy_propagation.cpp  copy_propagation.h  dead_code_elimination.cpp  dead_code_elimination.h  function_inline.cpp  function_inline.h  global_const_inline.h  global_constant_inline.cpp  global_value_numbering.cpp  global_value_numbering.h  helper.cpp  helper.h  induction_variable.cpp  induction_variable.h  local_value_numbering.cpp  local_value_numbering.h  loopinv.cpp  loopinv.h  memorization.cpp  memorization.h  module_simplification.cpp  module_simplification.h  opt_context.h  opt_pass.h  optimizer.h  promote_global_variables.cpp  promote_global_variables.h  reassociation.cpp  reassociation.h  remove_dead_blocks.cpp  remove_dead_blocks.h  simplify_cfg.cpp  simplify_cfg.h  ssa.cpp  ssa.h  value_numbering.cpp  (+1 more)
compiler/optim/analysis/: defuse.h  dominance.cpp  dominance.h  func_attr.cpp  func_attr.h  func_global_var.cpp  func_global_var.h  loop_info.cpp  loop_info.h  loop_tree.cpp  loop_tree.h
compiler/parse/: lexer.h  parser.cpp  parser.h  token.cpp  token.h
compiler/semantic/: semantic_checker.cpp  semantic_checker.h  semantic_context.h  sym_tbl.cpp
doc/: convention.md
ir/: CMakeLists.txt
ir-interpreter/: CMakeLists.txt  interpreter.cpp  interpreter.h  main.cpp
ir/include/ir/: helper.h  ir_inst.h  module.h  printer.h  stats.h
ir/src/: helper.cpp  module.cpp  printer.cpp
nasm/: CMakeLists.txt
nasm/include/nasm/: addr.h  helper.h  inst.h  module.h  printer.h  stats.h
nasm/src/: helper.cpp  module.cpp  printer.cpp
src/: CMakeLists.txt  compiler.cpp  compiler.h  main.cpp
src/ast/: ast_node.h  fwd.h  helper.h  printer.cpp  printer.h  scope_id.h  sym_tbl.cpp  sym_tbl.h  visitor.h
src/common/: defs.h  error.h  position.h
src/ir/: builder.cpp  builder.h  builder_context.cpp  builder_context.h  ir_inst.h  module.cpp  module.h  printer.cpp
src/lex/: lexer.cpp  lexer.h  token.h
src/parse/: common.h  expression.cpp  expression.h  lexer.cpp  lexer.h  parser.cpp  parser.h  token.cpp  token.h
src/semantic/: error.h  semantic_checker.cpp  semantic_checker.h  semantic_context.h  sym_tbl.cpp  sym_tbl.h
src/support/: optional.h  small_map.h
support/: CMakeLists.txt  defer.h  optional.h  set_operation.h  small_map.h
test/: CMakeLists.txt  build.bash  codegen.bash  config.json  main.cpp  naive_test_src.txt  run-judge.bash  semantic.bash  test_lexer.h  test_parser.h  test_src.txt  testcase.h
